--- a/src/main/resources/template/job.html
+++ b/src/main/resources/template/job.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <body>
-
+<script src="https://ajaxzip3.github.io/ajaxzip3.js"></script>
+<!--住所自動出力のためのスクリプト-->
 <nav th:insert="header.html :: header"></nav>
 
 <div class="full height image">
@@ -60,7 +61,7 @@
                                 <td>
                                     <p>例：123-4567</p>
                                     <div class="field" th:classappend="${errors.hasError('employerZipCode')} ? 'error'">
-                                        <input type="text" name="employerZipCode" th:value="${form.employerZipCode}"/>
+                                        <input type="text" class="zipcode" name="employerZipCode"maxlength="8" onKeyUp="AjaxZip3.zip2addr(this,'','employerAddress','employerAddress');"th:value="${form.employerZipCode}"/>
                                         <p th:if="${errors.hasError('employerZipCode')}"
                                            th:text="${errors.getMessage('employerZipCode')}" class="error-message">
                                         </p>
@@ -74,7 +75,7 @@
                                 <td>
                                     <p>例：東京都新宿区西新宿８－１７－１</p>
                                     <div class="field" th:classappend="${errors.hasError('employerAddress')} ? 'error'">
-                                        <input type="text" name="employerAddress" th:value="${form.employerAddress}"/>
+                                        <input type="text" class="p-region p-locality p-street-address p-extended-address" name="employerAddress" th:value="${form.employerAddress}"/>
                                         <p th:if="${errors.hasError('employerAddress')}"
                                            th:text="${errors.getMessage('employerAddress')}" class="error-message">
                                         </p>
