氏名のカタカナが自動入力されるように修正しました

--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 <nav th:insert="header.html :: header"></nav>
-<!-- 郵便番号から住所を自動入力するためのスクリプト-->
 <script src="https://ajaxzip3.github.io/ajaxzip3.js"></script>
+<!-- 郵便番号から住所を自動入力するためのスクリプト-->
+
 
 <div class="full height image">
     <div class="ui main container">
@@ -46,7 +47,7 @@
                                 <td>
                                     <p>例：ＴＩＳ　太郎</p>
                                     <div class="field" th:classappend="${errors.hasError('kanjiName')} ? 'error'">
-                                        <input type="text" name="kanjiName" th:value="${form.kanjiName}"/>
+                                        <input type="text" id="user_name" name="kanjiName" th:value="${form.kanjiName}"/>
                                         <p th:if="${errors.hasError('kanjiName')}"
                                            th:text="${errors.getMessage('kanjiName')}" class="error-message">
                                         </p>
@@ -61,7 +62,7 @@
                                 <td>
                                     <p>例：ティーアイエス　タロウ</p>
                                     <div class="field" th:classappend="${errors.hasError('kanaName')} ? 'error'">
-                                        <input type="text" name="kanaName" th:value="${form.kanaName}"/>
+                                        <input type="text"id="user_name_kana" name="kanaName" th:value="${form.kanaName}"/>
                                         <p th:if="${errors.hasError('kanaName')}"
                                            th:text="${errors.getMessage('kanaName')}" class="error-message">
                                         </p>
@@ -310,6 +311,17 @@
                         </div>
                     </form><script src="//code.jquery.com/jquery-2.1.0.min.js" type="text/javascript"></script>
                     <script src="//jpostal-1006.appspot.com/jquery.jpostal.js" type="text/javascript"></script>
+                    <script src="/js/jquery.autoKana.js"language="javascript" type="text/javascript"></script>
+                    <script type="text/javascript">
+                        $(function(){
+                            $(document).ready(
+                                function() {
+                                    $.fn.autoKana('#user_name', '#user_name_kana', {
+                                        katakana : true  //true：カタカナ、false：ひらがな（デフォルト）
+                                });
+                            });
+                        });
+                    </script>
 
                 </div>
             </div>
