--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -46,7 +46,7 @@
                                 <td>
                                     <p>例：ＴＩＳ　太郎</p>
                                     <div class="field" th:classappend="${errors.hasError('kanjiName')} ? 'error'">
-                                        <input type="text" name="kanjiName" th:value="${form.kanjiName}"/>
+                                        <input type="text" name="kanjiName" id="user_name" th:value="${form.kanjiName}"/>
                                         <p th:if="${errors.hasError('kanjiName')}"
                                            th:text="${errors.getMessage('kanjiName')}" class="error-message">
                                         </p>
@@ -61,7 +61,7 @@
                                 <td>
                                     <p>例：ティーアイエス　タロウ</p>
                                     <div class="field" th:classappend="${errors.hasError('kanaName')} ? 'error'">
-                                        <input type="text" name="kanaName" th:value="${form.kanaName}"/>
+                                        <input type="text" name="kanaName" id="user_name_kana" th:value="${form.kanaName}"/>
                                         <p th:if="${errors.hasError('kanaName')}"
                                            th:text="${errors.getMessage('kanaName')}" class="error-message">
                                         </p>
@@ -125,7 +125,7 @@
                                 <td>
                                     <p>例：123-4567</p>
                                     <div class="field" th:classappend="${errors.hasError('zipCode')} ? 'error'">
-                                        <input type="text"  class="zipcode" name="zipCode p-postal-code"maxlength="8" onKeyUp="AjaxZip3.zip2addr(this,'','address','address');" th:value="${form.zipCode}"/>
+                                        <input type="text"  class="zipcode" name="zipCode"maxlength="8" onKeyUp="AjaxZip3.zip2addr(this,'','address','address');" th:value="${form.zipCode}"/>
                                         <p th:if="${errors.hasError('zipCode')}"
                                            th:text="${errors.getMessage('zipCode')}" class="error-message">
                                         </p>
@@ -321,6 +321,17 @@
                         });
                     </script>
                     <!--ここまで -->
+                    <script src="/js/jquery.autoKana.js"language="javascript" type="text/javascript"></script>
+                    <script type="text/javascript">
+                        $(function(){
+                            $(document).ready(
+                                function() {
+                                    $.fn.autoKana('#user_name', '#user_name_kana', {
+                                        katakana : true  //true：カタカナ、false：ひらがな（デフォルト）
+                                });
+                            });
+                        });
+                    </script>
                 </div>
             </div>
         </div>
